[build-system]
requires = ['uv_build>=0.8.3,<0.9.0']
build-backend = 'uv_build'

[project]
name = "fipiran"
description = "a library to retrieve data from fipiran.ir website"
keywords = ["fipiran", "client"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.13"
dependencies = [
    "aiohutils >= 0.21.0",
    "jdatetime",
    "lxml",
    "pandas[pyarrow] >= 2.2.1",
    "pydantic",
]
version = "0.23.2.dev0"

[[authors]]
name = "5j9"
email = "5j9@users.noreply.github.com"

[project.license]
text = "GNU General Public License v3 (GPLv3)"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/5j9/fipiran"

[tool.ruff]
line-length = 79
format.quote-style = 'single'
lint.isort.combine-as-imports = true
lint.extend-select = [
    'W605', # invalid-escape-sequence
    'FA',  # flake8-future-annotations
    'I',  # isort
    'UP',  # pyupgrade
    'RUF', # Ruff-specific rules (RUF)
]
lint.ignore = [
    'E721',  # Do not compare types, use `isinstance()`
    'RUF001',  # ambiguous-unicode-character-string	
    'RUF002',  # ambiguous-unicode-character-docstring
    'RUF003',  # ambiguous-unicode-character-comment
    'RUF012',  # mutable-class-default
]

[tool.pytest.ini_options]
addopts = '--quiet --tb=short'
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'session'
asyncio_default_test_loop_scope = 'session'


[tool.pyright]
typeCheckingMode = 'standard'
reportInvalidStringEscapeSequence = false
reportConstantRedefinition = 'error'
reportDeprecated = 'warning'
reportPropertyTypeMismatch = 'error'
reportTypeCommentUsage = 'warning'
reportUnnecessaryCast = 'warning'
reportUnnecessaryComparison = 'warning'
reportUnnecessaryContains = 'warning'
reportUnnecessaryIsInstance = 'warning'
reportUnnecessaryTypeIgnoreComment = 'warning'

[tool.uv.build-backend]
module-root = ""
module-name = "fipiran"
[dependency-groups]
dev = [
    "aiohutils[test]>=0.22.1",
]
