[metadata]
name = fipiran
version = attr: fipiran.__version__
author = 5j9
author_email = 5j9@users.noreply.github.com
license = GNU General Public License v3 (GPLv3)
description = a library to retrieve data from fipiran.com website
keywords = fipiran, client
url = https://github.com/5j9/fipiran
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.10

[options]
packages = fipiran
zip_safe = True
install_requires =
    urllib3
    pandas
    beautifulsoup4
    lxml
    jdatetime
python_requires = >=3.10

[options.extras_require]
test =
    pytest
